@startuml

title __JOBS's Class Diagram__\n

  package business {
    package business.jobs {
      abstract class Job {
          # jobTitle : String
          ~ Job()
          + getJobTitle()
          + getSalary()
      }
    }
  }
  

  package business {
    package business.jobs {
      class JuniorDev {
          + JuniorDev()
          + getRepositoryLink()
          + getProgressData()
          + getTestResults()
      }
    }
  }
  

  package business {
    package business.jobs {
      class Manager {
          + Manager()
          + getSubordinates()
          + getManagedBranch()
          + sendToTrainingCourse()
      }
    }
  }
  

  Job o-- PaymentStrategy : salary
  JuniorDev -up-|> Job
  Manager -up-|> Job


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
